# kinopoisk_top500_parser

./: .env.default  .env__default  .gitignore  README.md  __main__.py  chrome_config.py  chrome_parsing.py  class_films.py  config.py  crawler.py  custom_webriver.py  downloader.py  extractor.py  extractors.py  fixtures.py  image_downloader.py  main.py  models.py  movie_info_extractor.py  movie_model.py  movies_info.json  movies_list.py  normalizer.py  pages_downloader.py  parser.py  parsers.py  pyproject.toml  requirements.txt  scraper.py  utils.py
__pages_list_movies/: movies_page_1.html  movies_page_2.html  movies_page_5.html
__pages_movies/: movie_100.html  movie_103.html  movie_105.html  movie_106.html  movie_11.html  movie_113.html  movie_122.html  movie_132.html  movie_136.html  movie_137.html  movie_140.html  movie_141.html  movie_142.html  movie_149.html  movie_15.html  movie_156.html  movie_159.html  movie_161.html  movie_170.html  movie_173.html  movie_177.html  movie_184.html  movie_194.html  movie_196.html  movie_203.html  movie_206.html  movie_208.html  movie_210.html  movie_214.html  movie_216.html  movie_221.html  movie_222.html  movie_225.html  movie_227.html  movie_235.html  movie_237.html  movie_239.html  movie_24.html  movie_240.html  movie_245.html  (+16 more)
pages_list_movies/: movies_page_1.html  movies_page_2.html  movies_page_3.html  movies_page_4.html
pages_movies/: movie_1.html  movie_10.html  movie_101.html  movie_102.html  movie_104.html  movie_107.html  movie_108.html  movie_109.html  movie_110.html  movie_111.html  movie_112.html  movie_114.html  (+182 more)
(+5 files in other folders)
