[tool.poetry]
name = "parser-kinopoisk"
version = "0.1.0"
description = ""
authors = ["soldier-toy <soldiertoy01@gmail.com>"]
readme = "README.md"
packages = [{include = "parser_kinopoisk"}]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.8.0"
lxml = "^4.9.2"
beautifulsoup4 = "^4.11.1"
webdriver-manager = "^3.8.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
